Java fx and intaller